# capbot-ros-foxy

./: .dockerignore  .gitattributes  .gitignore  README.md
docker/: Dockerfile  README.md  build.sh  docker-compose.yml  entrypoint.sh  run.sh
nav2/: build_nav2.sh  nav2.repos
src/test_bot/: CMakeLists.txt  package.xml
src/test_bot/config/: camera.yaml  ekf.yaml  ekf_real.yaml  markers_db_large.yaml  markers_db_maze.yaml  markers_db_small.yaml  nav2_params.yaml  test_map_large.yaml  test_map_maze.pgm  test_map_maze.yaml  test_map_small.pgm  test_map_small.yaml
src/test_bot/description/: camera.xacro  imu.xacro  robot_core.xacro  robot_real.urdf.xacro  tof.xacro
src/test_bot/launch/: nav2_test.launch.py  real_robot.launch.py
src/test_bot/maps/: map.pgm  map.yaml
src/test_bot/meshes/: base_link.stl
src/test_bot/scripts/: aruco_localizer.py  csi_camera_node.py  esp32_serial_bridge.py  fake_odom.py  gui_bridge_node.py  object_detector.py  teleop_gateway.py
tools/: make_maze_map.py  test_detectnet_camera.py
